[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ilp-simulator"
version = "0.1.0"
description = "Some Simple CPU Simulators"
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["inorder"]

[project.optional-dependencies]
inorder = []

[project.urls]
Homepage = "https://github.com/KaurkerDevourer/ilp-simulator"
